src/components/Header/header.scss
@import '~/sass/variables';
@import '~/sass/utilities/mixins';

.header {
  @include flex-box(
    $direction: row,
    $justify-content: space-between,
    $align-items: center
  );

  height: $height-header-footer;
  margin: auto;
  max-width: $max-page-width;
  padding: 0 $spacer-l;
  position: relative;
  width: 100%;
  z-index: 10;

  .logo {
    @include flex-box(
      $direction: row,
      $justify-content: center,
      $align-items: center
    );

    column-gap: $spacer-xxxs;
    text-decoration: none;

    &__image {
      width: to-rem(38);
    }

    &__text {
      color: $header-clr;
      font-weight: $font-weight-bold;
      margin-left: to-rem(20);
    }

    &:focus-visible {
      border-radius: 5px;
      outline: 4px dashed $orange-200;
    }
  }

  .navlinks {
    $_this: &;

    @include reset-list-style;
    @include flex-box(
      $direction: row,
      $justify-content: center,
      $align-items: center
    );

    &__academies {
      @include flex-box(
        $direction: column,
        $justify-content: center,
        $align-items: center
      );
    }

    &__academies-menu {
      background-color: $header-bg-clr;
      border: 0;
      font-family: $paragraph-font;
      padding: 0;
      position: relative;
      z-index: 1;
    }

    &__academies-arrow {
      margin-left: to-rem(7);
      width: to-rem(14);
    }

    &__academies-dropdown {
      position: absolute;
      top: to-rem(78);
    }

    &__academies-menu:hover {
      #{$_this}__academies-arrow {
        fill: $white-400;
      }

      cursor: pointer;
    }

    &__link {
      position: relative;
      z-index: 2;
    }

    &__link,
    &__academies-menu {
      border-radius: 5px;
      color: $header-clr;
      font-size: $font-size-m;
      line-height: inherit;
      padding: to-rem(7) to-rem(11);
      position: relative;
      text-decoration: none;

      &:focus-visible {
        outline: 4px dashed $orange-200;
      }

      &:hover {
        background-color: $violet-400;
        color: $white-400;
        transition: $transition-time-200;
      }
    }

    &__link--active,
    &__academies-menu--active {
      text-decoration: underline;
      text-decoration-color: $violet-600;

      &:hover {
        text-decoration-color: $white-400;
      }
    }
  }
}

